builder/tests/08-unrecognized-attribute.stderr
error: expected one of `,`, `:`, or `}`, found `!`
  --> tests/08-unrecognized-attribute.rs:22:15
   |
19 | #[derive(Builder)]
   |          ------- while parsing this struct
...
22 |     #[builder(eac = "arg")]
   |               ^^^ expected one of `,`, `:`, or `}`

error: proc-macro derive produced unparseable tokens
  --> tests/08-unrecognized-attribute.rs:19:10
   |
19 | #[derive(Builder)]
   |          ^^^^^^^

error: expected `builder(each = "...")`
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^^^^^^^^^

error[E0063]: missing fields `args`, `current_dir`, `env` and 1 other field in initializer of `CommandBuilder`
  --> tests/08-unrecognized-attribute.rs:19:10
   |
19 | #[derive(Builder)]
   |          ^^^^^^^ missing `args`, `current_dir`, `env` and 1 other field
   |
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
